discussion/kv_engine/175330/175330_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Cap the number of RangeScanContinueTasks

Prior to this commit RangeScans create one new task for each
continue or cancel request, allowing for RangeScans to utilise
all available AUXIO threads.

This commit caps the number of tasks that can exist by tracking
how many are in existence. A task can only be created if there
is capacity. The RangeScanContinueTask itself is adjusted so that
it keeps rescheduling whilst there are RangeScan objects that need
processing.

By default this commit will ensure that one AUXIO thread would be
free by only ever creating one less than the number of AUXIO threads
that exist.

Change-Id: I6e8e4d4bf9b6c608b233876749b9d7fb58b27908

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-10 16:12:41.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-10 16:24:10.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46772/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1218): error C2660: "std::vector<std::pair<cb::rangescan::Id,MockCookie *>,std::allocator<_Ty>>::emplace_back": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46772/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18076/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1218:15: error: no matching member function for call to "emplace_back" [clang-diagnostic-error]
        scans.emplace_back(
              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:1212:2: note: candidate function [with _Args = <>] not viable: requires 0 arguments, but 1 was provided
        emplace_back(_Args&&... __args);
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18076/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1218:15:
error: no matching member function for call to "emplace_back" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18076/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7838/ : FAILURE

Compile error at [2022-06-10T16:23:48.551Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1226:39:
error: no matching function for call to ?std::vector<std::pair<boost::uuids::uuid, MockCookie*> >::emplace_back(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7838/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7735/ : FAILURE

Compile error at [2022-06-10T16:16:27.345Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1218:15:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7735/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19923/ : FAILURE

Compile error at [2022-06-10T16:16:00.397Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1226:39:
error: no matching function for call to ?std::vector<std::pair<boost::uuids::uuid, MockCookie*> >::emplace_back(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19923/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20273/ : FAILURE

Compile error at [2022-06-10T16:19:12.262Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1226:39:
error: no matching function for call to ?std::vector<std::pair<boost::uuids::uuid, MockCookie*> >::emplace_back(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20273/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20918/ : FAILURE

Compile error at [2022-06-10T16:15:32.668Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1218:15:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20918/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19127/ : FAILURE

Compile error at [2022-06-10T16:23:03.952Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1218:15:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19127/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28311/ : FAILURE

Compile error at [2022-06-10T16:18:58.755Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1218:15:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28311/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17135/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39312/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
